<resources>
    <string name="app_name">Velibs</string>
    <string name="VelibName">Nom : </string>
    <string name="VelibStatus">Etat : </string>
    <string name="VelibBikes">Emplacements de Vélos : </string>
    <string name="VelibAvBikes">Emplacements de Vélos disponibles : </string>
    <string name="VelibAddress">Adresse : </string>
    <string name="VelibLastUpdate">Dernière mise à jour : </string>
    <string name="credits">Credits</string>
    <string name="share">Share on ...</string>
    <string name="share_title">Share</string>
    <string name="search">Search</string>
</resources>
